--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </p>
     <h2 class="w3-text-light-grey">WHO WE ARE</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>We are <b>SPEC-B</b>, Savvas, Pontus, Eric, Constandinos and Bjarni, a team of five from KTH. The game was developed for the purposes of the Computer Game Design course.
+    <p>We are <b>SPEC-B</b>, Savvas, Pontus, Erik, Constandinos and Bjarni, a team of five from KTH. The game was developed for the purposes of the Computer Game Design course.
     </p>
     <br>
     
