About us section cleanuip

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>House Next Door</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -68,8 +68,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </p>
     <h2 class="w3-text-light-grey">WHO WE ARE</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>We are <b>SPEC-B</b>, Savvas, Pontus, Erik, Constandinos and Bjarni, a team of five from KTH. The game was developed for the purposes of the Computer Game Design course.
-    </p>
+      <p>We are <b>SPEC-B</b></p>
+      <p>Erik Lindström - Game design, programming</p>
+      <p>Bjarni Guðmundsson - Game design, programming</p>
+      <p>Savvas Papadopoulos - Game Design Document creator</p>
+      <p>Constandinos Makris - Game Design Document creator</p>
+      <p>Pontus Brink - Sound Design</p>
     <br>
     
   <!-- End About Section -->
