--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <p>We are <b>SPEC-B</b></p>
       <p>Erik Lindström - Game design, programming</p>
       <p>Bjarni Guðmundsson - Game design, programming</p>
-      <p>Savvas Papadopoulos - Game Design Document creator</p>
-      <p>Constandinos Makris - Game Design Document creator</p>
+      <p>Savvas Papadopoulos - Logo Design, Poster Design, Typography, Website Design, Market research, Competitors Analysis, Business Planning, Game Design Document</p>
+      <p>Constandinos Makris - Logo Design, Poster Design, Typography, Website Design, Market research, Competitors Analysis, Business Planning, Game Design Document</p>
       <p>Pontus Brink - Sound Design</p>
     <br>
     
