--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <p>Bjarni Guðmundsson - Game design, programming</p>
       <p>Savvas Papadopoulos - Logo Design, Poster Design, Typography, Website Design, Market research, Competitors Analysis, Business Planning, Game Design Document</p>
       <p>Constandinos Makris - Logo Design, Poster Design, Typography, Website Design, Market research, Competitors Analysis, Business Planning, Game Design Document</p>
-      <p>Pontus Brink - Sound Design</p>
+      <p>Pontus Brink - Sound Design, Game Design Document</p>
     <br>
     
   <!-- End About Section -->
