--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2 class="w3-text-light-grey">WHO WE ARE</h2>
     <hr style="width:200px" class="w3-opacity">
       <p>We are <b>SPEC-B</b></p>
-      <p>Erik Lindström - Game design, programming</p>
-      <p>Bjarni Guðmundsson - Game design, programming</p>
-      <p>Savvas Papadopoulos - Logo Design, Poster Design, Typography, Website Design, Market research, Competitors Analysis, Business Planning, Game Design Document</p>
-      <p>Constandinos Makris - Logo Design, Poster Design, Typography, Website Design, Market research, Competitors Analysis, Business Planning, Game Design Document</p>
-      <p>Pontus Brink - Sound Design, Game Design Document</p>
+      <p><b>Erik Lindström</b> - Game design, programming</p>
+      <p><b>Bjarni Guðmundsson</b> - Game design, programming</p>
+      <p><b>Savvas Papadopoulos</b> - Logo Design, Poster Design, Typography, Website Design, Market research, Competitors Analysis, Business Planning, Game Design Document</p>
+      <p><b>Constandinos Makris</b> - Logo Design, Poster Design, Typography, Website Design, Market research, Competitors Analysis, Business Planning, Game Design Document</p>
+      <p><b>Pontus Brink</b> - Sound Design, Game Design Document</p>
     <br>
     
   <!-- End About Section -->
